// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Sheet /> snapshots blocking, left snapshot 1`] = `
<sheet-container>
  <div
    className="pgn__sheet-skrim"
    onClick={[Function]}
    role="presentation"
  />
  <div
    aria-atomic="true"
    aria-live="polite"
    className="pgn__sheet-component pgn__sheet__light left"
    role="alert"
  >
    <div
      className="pgn__sheet-content"
    />
  </div>
</sheet-container>
`;

exports[`<Sheet /> snapshots dark, right snapshot 1`] = `
<sheet-container>
  <div
    className="pgn__sheet-skrim hidden"
    onClick={[Function]}
    role="presentation"
  />
  <div
    aria-atomic="true"
    aria-live="polite"
    className="pgn__sheet-component pgn__sheet__dark right"
    role="alert"
  >
    <div
      className="pgn__sheet-content"
    />
  </div>
</sheet-container>
`;

exports[`<Sheet /> snapshots default args snapshot: bottom, show, light 1`] = `
<sheet-container>
  <div
    className="pgn__sheet-skrim hidden"
    onClick={[Function]}
    role="presentation"
  />
  <div
    aria-atomic="true"
    aria-live="polite"
    className="pgn__sheet-component pgn__sheet__light bottom"
    role="alert"
  >
    <div
      className="pgn__sheet-content"
    >
      <div
        className="sheet-content"
      >
        Hi
      </div>
    </div>
  </div>
</sheet-container>
`;
